testsuite/gsksl/errors/missing-endif-after-if-0.glsl
#if 0

void
main ()
{
}
